--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </div>
         </div>
         <div class="body">
+            <h1>body</h1>
         </div>
         <div class="footer"></div>
     </div>
