--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
         <div class="body">
             <h1>body</h1>
+            <p>chinh sua ne </p>
         </div>
         <div class="footer"></div>
     </div>
