--- a/index.html
+++ b/index.html
@@ -1,76 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
-    <link rel="stylesheet" href="./css/grid.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./img/themify-icons/fonts/">
-    <script src="https://kit.fontawesome.com/5e27442559.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project</title>
+  <link rel="stylesheet" href="./css/grid.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="header__navbar grid wide">
-                <div class="header__navbar-left">
-                    <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-youtube-square"></i>
-                    </a>
-                    <a href="#">About</a>
-                    <a href="#">Contact</a>
-                    <a href="#">Buy theme</a>
-                </div>
-                <div class="header__navbar-right">
-                    <a href="#">Login</a>
-                    <a href="#">Register</a>
-                </div>
-            </div>
-            <div class="header__nav">
-                <div class="header__main grid wide">
-                    <div class="header__main-content">
-                        <a href="#">
-                            <img src="./img/logo.png" alt="">
-                        </a>
-                        <a href="#"class="header-main-content--text">
-                            Demos
-                            <i class="fas fa-chevron-down"></i>
-                        </a>
-                        <a href="#"class="header-main-content--text">
-                            Features
-                            <i class="fas fa-chevron-down"></i>
-                        </a>
-                        <a href="#"class="header-main-content--text">
-                            Lifestyle
-                            <i class="fas fa-chevron-down"></i>
-                        </a>
-                        <a href="#"class="header-main-content--text">Travel</a>
-                        <a href="#"class="header-main-content--text">About</a>
-                        <a href="#"class="header-main-content--text">Contact</a>
-                    </div>
-                    <div class="header__main-search">
-                        <button class="header__sub">Subcribe</button>
-                        <a href="#" class="header__search">
-                            <i class="fas fa-search"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
+  <div>
+    <div class="header">
+      <div class="left">
+        <a href="">
+          <i class='bx bxs-message-detail'></i>
+          <span>setsail@qode.com</span>
+        </a>
+        <a href="">
+          <i class='bx bx-phone'></i>
+          <span>0866411722</span>
+        </a>
+        <a href="">
+          <i class='bx bx-been-here'></i>
+          <span>Broadway & Morris St, New York</span>
+        </a>
+      </div>
+      <div class="right">
+        <div class="icon">
+          <a href="#">
+            <i class='bx bxl-twitter'></i>
+          </a>
+          <a href="#">
+            <i class='bx bxl-telegram'></i>
+          </a>
+          <a href="#">
+            <i class='bx bxl-facebook'></i>
+          </a>
+          <a href="#">
+            <i class='bx bxl-instagram'></i>
+
+          </a>
         </div>
-        <div class="body">
-            
+        <div class="list">
+          <div>
+            <span>English
+            </span>
+            <i class='bx bxs-chevron-down'></i>
+            <ul>
+              <li>
+                <p>French</p>
+              </li>
+              <li>
+                <p>German</p>
+              </li>
+              <li>
+                <p>Italian</p>
+              </li>
+            </ul>
+          </div>
+          <a href="#" class="account">
+            <i class='bx bxs-user-account'></i>
+          </a>
         </div>
-        <div class="footer"></div>
+      </div>
     </div>
+    <div class="grid wide">
+      <div class="nav">
+        <a href="#">
+          <img src="./img/logo.png" alt="">
+        </a>
+      </div>
+      <div class="nav2">
+        <div class="row">
+          <ul class="list">
+            <li>
+              <a href="">
+                Home
+                <span></span>
+              </a>
+              <div class="listUl">
+                <ul>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                  <li><a href="">
+                      Travel Agency
+                      <span></span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a href="">
+                Pages
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Destinations
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Tours
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Blog
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Shop
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Elements
+                <span></span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
